basicamente es el main de antes, hay que hacer que interactue con nuevas pantallas

--- a/progra 3_ED.vcxproj
+++ b/progra 3_ED.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="AA.h" />
     <ClInclude Include="Binario.h" />
     <ClInclude Include="codigos_nombres.h" />
+    <ClInclude Include="Main Anterior.h" />
     <ClInclude Include="RN.h" />
     <ClInclude Include="VentanaPrincipal.h">
       <FileType>CppForm</FileType>
